--- a/src/assets/scss/blog/aside.scss
+++ b/src/assets/scss/blog/aside.scss
@@ -1,3 +1,4 @@
+
 aside.l-aside {
   position: fixed;
   height: 100%;
@@ -68,7 +69,7 @@ aside.l-aside {
   .navbar {
     position: relative;
     margin-top: 20vh;
-    max-height: 80vh;
+    max-height: 60vh;
     overflow-y: auto;
     overflow-x: hidden;
     &::-webkit-scrollbar {
@@ -114,6 +115,18 @@ aside.l-aside {
           }
         }
       }
+    }
+  }
+}
+
+@media (max-width:768px){
+  aside.l-aside{
+    .navbar{
+      margin-top: 0;
+    }
+    .sidebar-btn{
+      top: auto;
+      bottom: 10%;
     }
   }
 }
