--- a/src/assets/scss/blog/index.scss
+++ b/src/assets/scss/blog/index.scss
@@ -368,6 +368,7 @@ section.classify {
 
   .weather {
     align-self: center;
+    width: 100% !important;
   }
 }
 
@@ -379,11 +380,53 @@ section.classify {
     position: relative;
     width: 300px;
     min-height: 180px;
-
+    &.show-more{
+      .w-fullpage{
+        display: block;
+      }
+    }
     .inner {
       display: flex;
     }
-
+    .w-fullpage{
+      position: fixed;
+      display: none;
+     
+      width:100vw;
+      height: 100vh;
+      
+      background-color: rgba(30, 47, 95, 0.897);
+      z-index: 9999;
+      overflow: hidden;
+      animation: fullpageAni 1s forwards;
+      p{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        font-size: 2rem;
+      }
+    }
+    @keyframes fullpageAni {
+      0%{
+        width: 1px;
+        height: 1px;
+         top: 50%;
+      left: 50%;
+      }
+      50%{
+        width: 100vw;
+        left: 0;
+        top: 50%;
+        height: 1px;
+      }
+      100%{
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+      }
+    }
     .w-icon {
       .icon {
         display: none;
@@ -485,12 +528,12 @@ section.classify {
   flex-direction: row;
 
   .right-item {
-    width: 20%;
+    width: 25%;
   }
 }
 
 .article-list {
-  width: 80%;
+  width: 75%;
   opacity: 0;
   animation: translate_LeftToRight 1s forwards;
 
@@ -807,6 +850,30 @@ section.classify {
         height: 2rem;
         vertical-align: bottom;
         margin-right: 5px;
+      }
+    }
+  }
+  .update-log-box{
+    .title{
+      a{
+        color: rgb(207, 207, 207);
+        &:hover{
+          color: #fff;
+        }
+      }
+    }
+    .log-list{
+      border-left: 1px solid rgb(78, 78, 78);
+      padding-left: 25px;
+      .log-list-item{
+        margin-bottom: 15px;
+        .u-cnt{
+          color: rgb(167, 167, 167);
+          font-size: .9em;
+        }
+      }
+      .log-end{
+        text-align: right;
       }
     }
   }
