--- a/src/assets/scss/resume_s.scss
+++ b/src/assets/scss/resume_s.scss
@@ -1,9 +1,9 @@
 @import 'mixin';
 
-html {
-  width: 100%;
-  height: 100%;
-}
+// html {
+//   width: 100%;
+//   height: 100%;
+// }
 
 h1 {
   small {
