--- a/src/assets/scss/mixins/_animation.scss
+++ b/src/assets/scss/mixins/_animation.scss
@@ -14,6 +14,10 @@
   animation: scaleIn_2x .5s forwards;
 }
 
+.MoveXToLeft {
+  animation: translateXToRight .5s forwards;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
