--- a/src/assets/scss/mixins/_set-color.scss
+++ b/src/assets/scss/mixins/_set-color.scss
@@ -1,6 +1,6 @@
 $bor-radius:2px;
 $color-bg:#141518;
-$color-block-wrap:#2c2f34;
+$color-block-wrap:#202225;
 $color-lk-bgcolor:rgb(255, 136, 0);
 $color-lk-hover-bgcolor:rgb(226, 121, 0);
 $color-font:#Fff;
